styled nav and banner images

--- a/index.html
+++ b/index.html
@@ -18,5 +18,41 @@
     <title>LeoSpa</title>
   </head>
 
-  <header>Test</header>
+  <header class="header">
+    <nav class="nav">
+      <div class="nav__logo">
+        <a href="#" class="nav__link"
+          ><img src="img/logo.png" alt="" class="nav__logo-img"
+        /></a>
+      </div>
+
+      <ul class="nav__navigation">
+        <li class="nav__item">
+          <a href="#" class="nav__link">Home</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">About</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Feature</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Service</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Contact</a>
+        </li>
+      </ul>
+    </nav>
+
+    <figure class="header__img--left">
+      <img src="img/header-bg.png" alt="" />
+    </figure>
+
+    <figure class="header__img--right">
+      <img src="img/hero.png" alt="" />
+    </figure>
+  </header>
+
+  <main></main>
 </html>
