added header content and styled button

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
     <figure class="header__img--right">
       <img src="img/hero.png" alt="" />
     </figure>
+
+    <div class="header__content">
+      <span class="header--span">Spa &amp; Beauty Center</span>
+      <h1 class="header__heading heading--1">Beauty and success start here.</h1>
+      <p class="header__description paragraph__text">
+        Leospa's mission is to rejuvenate and relax you so that you can live
+        your best life.
+      </p>
+      <button class="button button__pink">Reserve Now</button>
+    </div>
   </header>
 
   <main></main>
