added Procedures section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
 
     <main>
-      <section class="about">
+      <section class="about section__margin">
         <h2 class="heading__2">About Our Spa Center</h2>
         <p class="section__description paragraph__text">
           We are a team of passionate wellness professionals who provide
@@ -146,6 +146,46 @@
             <p class="service-card__text">Body Treatment</p>
           </div>
         </figure>
+      </section>
+
+      <section class="procedures section__margin">
+        <h2 class="heading__2">Popular Procedures</h2>
+        <p class="section__description paragraph__text paragraph__margin">
+          Relax with one of our popular procedures at our full-service spa. Spa
+          packages are available.
+        </p>
+
+        <div class="procedure__cards">
+          <figure class="procedure-card">
+            <img src="img/procedure-1.jpg" alt="" class="procedure-card__img" />
+            <h3 class="heading__3">Massage Therapy</h3>
+            <p class="procedure-card__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              veritatis culpa aspernatur impedit deserunt omnis.
+            </p>
+            <button class="button button__black">Read More</button>
+          </figure>
+
+          <figure class="procedure-card">
+            <img src="img/procedure-2.jpg" alt="" class="procedure-card__img" />
+            <h3 class="heading__3">Beauty Care</h3>
+            <p class="procedure-card__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
+              delectus facilis explicabo labore impedit deserunt omnis.
+            </p>
+            <button class="button button__black">Read More</button>
+          </figure>
+
+          <figure class="procedure-card">
+            <img src="img/procedure-3.jpg" alt="" class="procedure-card__img" />
+            <h3 class="heading__3">Executive Reflexology</h3>
+            <p class="procedure-card__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+              quibusdam ad! Molestias libero ad.
+            </p>
+            <button class="button button__black">Read More</button>
+          </figure>
+        </div>
       </section>
     </main>
   </body>
