added testimonial section without Javascript functionality and added hover effects to navigation

--- a/index.html
+++ b/index.html
@@ -20,15 +20,11 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <div class="nav__logo">
-          <a href="#" class="nav__link"
-            ><img src="img/logo.png" alt="" class="nav__logo-img"
-          /></a>
-        </div>
-
         <ul class="nav__navigation">
           <li class="nav__item">
-            <a href="#" class="nav__link">Home</a>
+            <a href="#" class="nav__link" id="nav__logo"
+              ><img src="img/logo.png" alt="" class="nav__logo-img"
+            /></a>
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">About</a>
@@ -185,6 +181,21 @@
             </p>
             <button class="button button__black">Read More</button>
           </figure>
+        </div>
+      </section>
+
+      <section class="slider">
+        <div class="slide">
+          <blockquote class="slide__quote">
+            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+            accusamus quod laudantium, accusantium similique repellendus atque
+            necessitatibus quo tempora alias! Consequatur nisi est sequi
+            cupiditate ea impedit tenetur aliquid eius!"
+          </blockquote>
+          <img src="img/client-1.png" alt="" class="slide__img" />
+          <p class="slide__caption">
+            Joan Smith, <span class="slide__caption-title">Executive</span>
+          </p>
         </div>
       </section>
     </main>
